--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/core": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.8.0",
     "@emotion/core": "^10.0.10",
     "@honeybadger-io/react": "^0.0.2",
     "@rails/webpacker": "^4.2.2",
