--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "chartkick": "^3.0.2",
-    "core-js": "2",
+    "core-js": "^3.6.3",
     "es6-promise": "^4.2.8",
     "eslint-plugin-react-hooks": "^1.6.0",
     "honeybadger-js": "^0.5.5",
@@ -39,6 +39,7 @@
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-spinners": "^0.5.3",
+    "regenerator-runtime": "^0.13.3",
     "sass": "^1.15.2",
     "selectize": "^0.12.6",
     "whatwg-fetch": "^3.0.0"
