--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,6 @@ coverage
 test-results/
 spec/examples.txt
 public/javascripts
+
+# Ignore master key for decrypting credentials and more.
+/config/master.key
