--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       REDIS_URL: redis://redis:6379
       PGHOST: postgres
       PGUSER: postgres
+    env_file:
+    - docker.env
     ports:
       - 3001:3001
     volumes:
