--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 
 version: "3.0"
 services:
-  rails:
+  app:
     build: .
     command: bundle exec foreman start -f Procfile_docker
     depends_on:
