switch to mapbox for stolen map, wip

--- a/.env
+++ b/.env
@@ -21,6 +21,8 @@ SPARKPOST_PORT=absent
 GOOGLE_MAPS=AIzaSyDH8ejgPgtdVFMB6USR8PifSL1F_AEY8Wg
 GOOGLE_MAPS_STATIC=AIzaSyDH8ejgPgtdVFMB6USR8PifSL1F_AEY8Wg
 GOOGLE_GEOCODER=AIzaSyDH8ejgPgtdVFMB6USR8PifSL1F_AEY8Wg
+MAPBOX_GEOCODER=absent
+MAPBOX_MAPPING=absent
 NOTIFICATIONS_API_KEY=SomeSpecialThing
 ORGANIZATIONS_API_ACCESS_TOKEN=SomeOtherSpecialThinger
 AUTO_ORG_MEMBER=user@example.com
